--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "jsdom": "^23.2.0",
     "vite": "^5.0.8",
-    "vitest": "^1.2.0"
+    "vitest": "^1.2.0",
+    "vitest-fetch-mock": "^0.2.2"
   }
 }
