--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "jsdom": "^23.2.0",
     "vite": "^5.0.8",
-    "vitest": "^1.2.0",
-    "vitest-fetch-mock": "^0.2.2"
+    "vitest": "^1.2.0"
   }
 }
